--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,8 +1,9 @@
 <main>  
-<div class="Links">
+  <nav class="nav-bar">
     <a routerLink="">Incident Report</a> 
-  <a routerLink="evacuation-center"> Evacuation Center</a>
-  <a routerLink="relief-distribution">Relief Distribution</a>
-</div>
-<router-outlet/>
-</main>  
+    <a routerLink="evacuation-center">Evacuation Center</a>
+    <a routerLink="relief-distribution">Relief Distribution</a>
+  </nav>
+
+  <router-outlet/>
+</main>
