--- a/src/app/incident-report/incident-report.html
+++ b/src/app/incident-report/incident-report.html
@@ -15,7 +15,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let report of reports">
+          <tr *ngFor="let report of incidents">
             <td>{{ report.date }}</td>
             <td>{{ report.location }}</td>
             <td>{{ report.incidentType }}</td>
